Jeg har linket js og css til html siderne

--- a/opret.html
+++ b/opret.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
+    <script src="js/script.js">
+    <link rel="stylesheet" href="css/Style.css">
     <meta charset="UTF-8">
-    <title>Untitled Document</title>
+    <title> Opret bruger</title>
 </head>
 <body>
 
