--- a/keyinfo.html
+++ b/keyinfo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="js/script.js">
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>Nøgle info</title>
 </head>
