--- a/login.html
+++ b/login.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+    <script src="js/script.js">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
