--- a/profil.html
+++ b/profil.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <script src="js/script.js">
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>Profil</title>
 </head>
 <body>
-
 
 
 </body>
