--- a/glemt.html
+++ b/glemt.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="js/script.js">
+    <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/Style.css">
     <meta charset="UTF-8">
     <title>Glemt Kodeord</title>
