--- a/opret.html
+++ b/opret.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="js/script.js">
+   <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title> Opret bruger</title>
