--- a/profil.html
+++ b/profil.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <script src="js/script.js">
+    <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>Profil</title>
 </head>
 <body>
 
+        
 
 </body>
 </html>
