--- a/profil.html
+++ b/profil.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>Profil</title>
 </head>
 <body>
-
+<div class="navbar">
+  <a href="#" class="active">Profil</a>
+  <a href="key.html">Nøgler</a>
+  <a href="help.html">Hjælp</a>
+  <a href="settings.html">Indstillinger</a>
+</div>
         
 
 </body>
