--- a/glemt.html
+++ b/glemt.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="js/script.js"></script>
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>Glemt Kodeord</title>
 </head>
