tilføjet logo og rettet nogle ting

--- a/profil.html
+++ b/profil.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <div class="navbar">
-  <a href="#" class="active">i class="fa fa-fw fa-home"></i></a>
+  
   <a href="key.html">Nøgler</a>
   <a href="help.html">Hjælp</a>
   <a href="settings.html">Indstillinger</a>
-    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+  <a href="#"><img src="img/icons/user/user1.png" alt="user light" height="42" width="42"></a>
 </div>
         
 
