--- a/forside.html
+++ b/forside.html
@@ -7,8 +7,8 @@
     <title>forside</title>
 </head>
 <body>
-
-
+<div id="grad1"></div>
+<button class="button buttonlogind">2px</button>
 
 </body>
 </html>
