button på login

--- a/login.html
+++ b/login.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-
-
+<h1>Velkommen tilbage</h1>
+    <h2>Venligst indtast dine login-oplysninger nedenunder</h2>
+    
+<button class="btnlogin2">Log Ind</button>
+<button class="btnglemtpassword">Glemt password?</button>
 </body>
 </html>
