--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
