--- a/profil.html
+++ b/profil.html
@@ -8,12 +8,13 @@
     <title>Profil</title>
 </head>
 <body>
-<div class="navbar">
+<div class="icon-bar">
+   <a href="#"><img src="img/icons/user/user2.svg" alt="user light" height="42" width="42"></a>
+   <a href="key.html"><img src="img/icons/lock/lock.png" alt="user light" height="42" width="42"></a>
+   <a href="help.html"><img src="img/icons/ask/ask1.svg" alt="user light" height="42" width="42"></a>
+   <a href="settings.html"><img src="img/icons/setting/setting.png" alt="user light" height="42" width="42"></a>
   
-  <a href="key.html">Nøgler</a>
-  <a href="help.html">Hjælp</a>
-  <a href="settings.html">Indstillinger</a>
-  <a href="#"><img src="img/icons/user/user1.png" alt="user light" height="42" width="42"></a>
+ 
 </div>
         
 
