--- a/opret.html
+++ b/opret.html
@@ -9,7 +9,18 @@
 </head>
 <body>
 
+<div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>  
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div> 
+</div>
 
-
+<div class="icon-bar">
+   <a href="#"><img src="img/icons/user/user2.svg" alt="user light" height="42" width="42"></a>
+   <a href="key.html"><img src="img/icons/lock/lock.png" alt="user light" height="42" width="42"></a>
+   <a href="help.html"><img src="img/icons/ask/ask1.svg" alt="user light" height="42" width="42"></a>
+   <a href="settings.html"><img src="img/icons/setting/setting.png" alt="user light" height="42" width="42"></a>
 </body>
 </html>
