--- a/help.html
+++ b/help.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>Hjælp</title>
