--- a/profil.html
+++ b/profil.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
