--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
 <br>
        <br><br><br>
        <br>
-      <button class="log-in"> Log In </button>
+      <button onclick="location.href='key.html'" class="log-in"> Log In </button>
    </div>
   
 </form>
