--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <script src="https://kit.fontawesome.com/3bfc6c5277.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
@@ -38,7 +39,7 @@
       <span class="input-item">
         <i class="fa fa-key"></i>
        </span>
-      <input class="form-input" type="password" placeholder=" Adgangskode"  name="Adgangskode" required>
+      <input class="form-input" type="password" placeholder="Adgangskode"  name="Adgangskode" required>
        
        <a href="#" class="forgot-pass">Glemt adgangskode?</a>
 <br>
