--- a/help.html
+++ b/help.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>Hjælp</title>
 </head>
-<body>
+<body class="ikkerul">
 <!--Navigations bottombar-->
 <div class="grid-container1">
     
