--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
-<body>
+<body class="ikkerul">
 
 <h1>Velkommen tilbage</h1>
     <h2>Venligst indtast dine login-oplysninger nedenunder</h2>
