--- a/opret.html
+++ b/opret.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title> Opret bruger</title>
 </head>
-<body>
+<body class="ikkerul">
 
 <div class="grid-container">
   <div class="grid-item">1</div>
@@ -16,11 +16,11 @@
   <div class="grid-item">4</div>
   <div class="grid-item">5</div> 
 </div>
-
 <div class="icon-bar">
    <a href="#"><img src="img/icons/user/user2.svg" alt="user light" height="42" width="42"></a>
    <a href="key.html"><img src="img/icons/lock/lock.png" alt="user light" height="42" width="42"></a>
    <a href="help.html"><img src="img/icons/ask/ask1.svg" alt="user light" height="42" width="42"></a>
    <a href="settings.html"><img src="img/icons/setting/setting.png" alt="user light" height="42" width="42"></a>
+</div> 
 </body>
 </html>
