Tilføjet en inviduel css side til hver HTML side for bedre arbejds fleksibilitet.

--- a/key.html
+++ b/key.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/keystyle.css">
     <meta charset="UTF-8">
     <title>Nøgler</title>
 </head>
