--- a/login.html
+++ b/login.html
@@ -4,13 +4,10 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/loginstyle.css">
     <title>Login</title>
 </head>
-
-<h1>Velkommen tilbage</h1>
-    <h2>Venligst indtast dine login-oplysninger nedenunder</h2>
-<body>
+<body class="ikkerul">
     <a href="#" class="previous round">&#8249;</a>
 <div class="logingrid">
     
