--- a/login.html
+++ b/login.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
-
-<h1>Velkommen tilbage</h1>
-    <h2>Venligst indtast dine login-oplysninger nedenunder</h2>
-<body>
+<body class="ikkerul">
     <a href="#" class="previous round">&#8249;</a>
 <div class="logingrid">
     
@@ -30,16 +27,11 @@
     
      <div class="overlay">
 <form>
-   <div class="field-set">
          <input class="form-input" id="txt-input" type="text" placeholder=" @ E-mailadresse" required>
      <br>
        <br>
       <input class="form-input" type="password" placeholder=" Adgangskode"  name="Adgangskode" required>
 
-      <span class="input-item">
-        <i class="fa fa-key"></i>
-       </span>
-      <input class="form-input" type="password" placeholder="Adgangskode"  name="Adgangskode" required>
 
        <a href="#" class="forgot-pass">Glemt adgangskode?</a>
 <br>
