--- a/key.html
+++ b/key.html
@@ -64,7 +64,7 @@
 <div class="keygrid">
 
     
-    <div class="dinenøgler">
+    <div class="dinenoegler">
       <p>Dine nøgler</p>
      </div>
 
