--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 </head>
 <body class="ikkerul">
-    <a href="#" class="previous round">&#8249;</a>
+<a href="#" onclick="location.href='forside.html'" class="previous round">&#8249;</a>
 <div class="logingrid">
     
     <div class="loginlogo">
