profil siden er færdig

--- a/help.html
+++ b/help.html
@@ -11,12 +11,12 @@
 <body class="ikkerul">
     
 <!--Navigations bottombar-->
-<div class="settingsgrid">
+<div class="helpgrid">
 <div class="box">
   <img src="img/Boxhelp.png" alt="box">
 </div>
 </div>
- <div class="settingsitems">
+ <div class="helpitems">
   
     <div class="noti">
     <h2>Kontakt</h2>
