--- a/glemt.html
+++ b/glemt.html
@@ -10,7 +10,27 @@
 </head>
 <body class="ikkerul">
 
+<a href="#" onclick="location.href='forside.html'" class="previous round">&#8249;</a>
 
+    <div class="loginlogo">
+    <img src="img/logo/sprutte_Tegnebr%C3%A6t%201.svg">
+         </div>
+
+<div class="Glemtkodeord">
+      <p>Nulstil adgangskode</p>
+      </div>
+    
+      <div class="Kontaktinformation">
+      <p>Venligst indtast den e-mail 
+          <br>
+          du har brugt til at oprette din profil med,  
+          <br>
+          så sender vi et link du kan nulstille din adgangskode med. </p>
+      </div>
+
+    <input class="form-input" type="email" placeholder=" E-mailadresse"  name=" E-mailadresse" required>
+
+    <button onclick="location.href='login.html'" class="tilbagelogind"> Send </button>
 
 </body>
 </html>
