--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/script.js"></script>
+    <script src="js/login.js"></script>
     <link rel="stylesheet" href="css/loginstyle.css">
     <title>Login</title>
 </head>
