--- a/profil.html
+++ b/profil.html
@@ -36,6 +36,9 @@
         <img src="img/front.png" width="15px" height="20px">
       </div>
      
+     <div class="slet">
+      <p>Slet konto</p>
+    </div>
 </div>
   
     
