--- a/styleguide.html
+++ b/styleguide.html
@@ -17,15 +17,15 @@
     
 <div class="styleguidegrid">
     <div class="farvebox1"></div>
-    <div class="farvetekst1"><p>#f2545b</p></div>
+    <div class="farvetekst1"><p>#fa7268</p></div>
     <div class="farvebox2"></div>
-    <div class="farvetekst2"><p>#105970</p></div>
+    <div class="farvetekst2"><p>#022e42</p></div>
     <div class="farvebox3"></div>
-    <div class="farvetekst3"><p>#2a7a97</p></div>
+    <div class="farvetekst3"><p>#37a8ad</p></div>
     <div class="farvebox4"></div>
-    <div class="farvetekst4"><p>#92c8c2</p></div>
+    <div class="farvetekst4"><p>#f7f8f9</p></div>
     <div class="farvebox5"></div>
-    <div class="farvetekst5"><p>#92c8c2</p></div>
+    <div class="farvetekst5"><p>#ffffff</p></div>
 </div>
 </body>
 </html>
