Opdatering af knap siden og styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -9,10 +9,10 @@
 </head>
 <body class="main">
 <ul>
-    <li><a class="active" href="#home">Farver</a></li>
-  <li><a href="#news">Knapper</a></li>
-  <li><a href="#contact">Billeder</a></li>
-  <li><a href="#about">Former</a></li>
+    <li><a class="active" href="styleguide.html">Farver</a></li>
+  <li><a href="knapper.html">Knapper</a></li>
+  <li><a href="#billeder.html">Billeder</a></li>
+  <li><a href="#typografi.html">Typografi</a></li>
 </ul>
     
 <div class="styleguidegrid">
