--- a/newkey.html
+++ b/newkey.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
-    <link rel="stylesheet" href="newkey.css">
+    <link rel="stylesheet" href="css/newkey.css">
     <meta charset="UTF-8">
     <title>Nøgler</title>
 </head>
