--- a/knapper.html
+++ b/knapper.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
     <script src="js/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
     <meta charset="UTF-8">
     <title>Knapper</title>
 </head>
