--- a/login.html
+++ b/login.html
@@ -8,8 +8,9 @@
     <title>Login</title>
 </head>
 <body class="ikkerul">
-<a href="#" onclick="location.href='forside.html'" class="previous round">&#8249;</a>
-
+<div class="back">
+    <a href="#" onclick="location.href='forside.html'"><img src="img/back.png" width="20px" height="30px"></a>
+  </div>
 
     <div class="loginlogo">
     <img src="img/logo/sprutte_Tegnebr%C3%A6t%201.svg">
@@ -20,7 +21,9 @@
       </div>
     
       <div class="oplysningerlogin">
-      <p>Venligst indtast dine login-oplysninger </p>
+      <p>Venligst indtast dine login-
+          <br>
+          oplysninger </p>
       </div>
     
     <br>
@@ -31,12 +34,12 @@
      <br>
        <br>
       <input class="form-input" type="password" placeholder=" Adgangskode"  name="Adgangskode" required>
-
+<br><br>
        <a href="#" onclick="location.href='glemt.html'" class="forgot-pass">Glemt adgangskode?</a>
 <br>
        <br><br><br>
        <br>
-      <button onclick="location.href='key.html'" class="log-in"> Log In </button>
+      <button onclick="location.href='key.html'" class="log-in"> Log ind </button>
   
 </form>
 </div>
