--- a/glemt.html
+++ b/glemt.html
@@ -10,65 +10,11 @@
 </head>
 <body class="ikkerul">
     
-    <form role="form" method="post">
-    <div class="box box-primary">
-        <div class="box-header">
-            <h2 class="page-header"><i class="fa fa-lock"></i> Skift adgangskode</h2>
-            <div class="pull-right">
-                <button type="button" name="Submit" value="Save" class="btn btn-danger"><i class="livicon" data-n="pen" data-s="16" data-c="#fff" data-hc="0" ></i> Gem</button>
-                <button type="reset" name="Reset" value="Clear" class="btn btn-primary"><i class="livicon" data-n="trash" data-s="16" data-c="#fff" data-hc="0"></i> Slet</button>
-            </div>
-        </div>
-        <!-- /.box-header -->
+    <div class="back">
+    <a href="#" onclick="location.href='forside.html'"><img src="img/back.png" width="20px" height="30px"></a>
+  </div>
+    
 
-        <div class="box-body">
-            <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <label>Gammel adgangskode</label>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <div class="input-group">
-                        <div class="input-group-addon">
-                            <i class="fa fa-lock"></i>
-                        </div>
-                        <input class="form-control" id="oldPassword" name="oldPassword" value="" placeholder="Skriv din gamle adgangskode" type="password">
-                    </div>
-                </div>
-                <!-- /.input group -->
-            </div>
-            <br/>
-            <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <label>Ny adgangskode</label>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <div class="input-group">
-                        <div class="input-group-addon">
-                            <i class="fa fa-lock"></i>
-                        </div>
-                        <input class="form-control" id="newPassword" name="newPassword" value="" placeholder="Skriv din gamle adgangskode" type="password">
-                    </div>
-                </div>
-                <!-- /.input group -->
-            </div>
-            <br/>
-            <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <label>Gentag adgangskode</label>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <div class="input-group">
-                        <div class="input-group-addon">
-                            <i class="fa fa-lock"></i>
-                        </div>
-                        <input class="form-control" id="confirmPassword" name="confirmPassword" value="" placeholder="Gentag ny adgangskode" type="password">
-                    </div>
-                </div>
-                <!-- /.input group -->
-            </div>
-        </div>
-        </div>
-</form>
 
 
 </body>
