--- a/profil.html
+++ b/profil.html
@@ -13,7 +13,7 @@
  <div class="profilitems">
      
     <div class="oply">
-    <p>rediger oplysninger</p>
+    <p>Rediger oplysninger</p>
     </div>
     
       <div class="oplyknap">
